doctorService refactor